tests/baselines/reference/property_access_update_extra_incorrect.errors.txt
tests/cases/compiler/property_access_update_extra_incorrect.ts(22,3): error TS2322: Type '{ times: number; ns: number; }' is not assignable to type 'OSUTime'.
  Predicate not(and(present(times),present(ns))) was not satisfied in type { times: number; ns: number; }
tests/cases/compiler/property_access_update_extra_incorrect.ts(25,3): error TS95021: All properties from the predicates in which the properties of the second argument are mentioned, must be a part of the second argument
tests/cases/compiler/property_access_update_extra_incorrect.ts(29,5): error TS2322: Type 'number | undefined' is not assignable to type 'number'.
  Type 'undefined' is not assignable to type 'number'.
tests/cases/compiler/property_access_update_extra_incorrect.ts(36,12): error TS2322: Type '{ lat: number; long: number; }' is not assignable to type 'Picture'.
  Predicate implic(present(lat),present(picture)) was not satisfied in type { lat: number; long: number; }
tests/cases/compiler/property_access_update_extra_incorrect.ts(36,12): error TS95021: All properties from the predicates in which the properties of the second argument are mentioned, must be a part of the second argument
tests/cases/compiler/property_access_update_extra_incorrect.ts(42,12): error TS2322: Type '{ picture: undefined; lat: number; long: number; }' is not assignable to type 'Picture'.
  Predicate implic(present(lat),present(picture)) was not satisfied in type { picture: undefined; lat: number; long: number; }
tests/cases/compiler/property_access_update_extra_incorrect.ts(47,10): error TS2322: Type '{ lat: any; long: any; }' is not assignable to type 'Picture'.
  Predicate implic(present(lat),present(picture)) was not satisfied in type { lat: any; long: any; }
tests/cases/compiler/property_access_update_extra_incorrect.ts(47,10): error TS95021: All properties from the predicates in which the properties of the second argument are mentioned, must be a part of the second argument
tests/cases/compiler/property_access_update_extra_incorrect.ts(47,31): error TS95009: Cannot access lat from the object because its interface does not contain the predicate present(lat). Use a non-undefined type guard.
tests/cases/compiler/property_access_update_extra_incorrect.ts(47,58): error TS95009: Cannot access long from the object because its interface does not contain the predicate present(long). Use a non-undefined type guard.
tests/cases/compiler/property_access_update_extra_incorrect.ts(57,5): error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition


==== tests/cases/compiler/property_access_update_extra_incorrect.ts (11 errors) ====
    
    interface Picture {
      caption?: string;
      picture?: string;
      lat?: number;
      long?: number;
    } constrains {
      present(caption);
      implic(present(lat), present(picture));
      implic(present(long), present(picture));
      iff(present(lat), present(long))
    }
    interface OSUTime {
      times?: number;
      ns?: number
    } constrains {
      not(and(present(times),
              present(ns)));
    }
    
    function updateWrongTime(time: OSUTime, times: number, ns: number) {
      objupdate(time, {times: times, ns: ns});
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ times: number; ns: number; }' is not assignable to type 'OSUTime'.
!!! error TS2322:   Predicate not(and(present(times),present(ns))) was not satisfied in type { times: number; ns: number; }
    }
    function updateWrongTime2(time: OSUTime, times: number) {
      objupdate(time, {times: times});
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95021: All properties from the predicates in which the properties of the second argument are mentioned, must be a part of the second argument
    }
    function wrongTime(time: OSUTime, times: number | undefined) {
      if(time.times) {
        time.times = times;
        ~~~~~~~~~~
!!! error TS2322: Type 'number | undefined' is not assignable to type 'number'.
!!! error TS2322:   Type 'undefined' is not assignable to type 'number'.
      }
    }
    
    function incorrectUpdate(pic: Picture, extra_lat: number, extra_long: number) {
      if (pic.lat) {
        //should not be accepted because it is not certain the picture property is present
        return objupdate(pic, {lat: pic.lat + extra_lat, long: pic.long + extra_long});
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ lat: number; long: number; }' is not assignable to type 'Picture'.
!!! error TS2322:   Predicate implic(present(lat),present(picture)) was not satisfied in type { lat: number; long: number; }
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95021: All properties from the predicates in which the properties of the second argument are mentioned, must be a part of the second argument
      }
    }
    function incorrectUpdate2(pic: Picture, extra_lat: number, extra_long: number) {
      if (pic.lat) {
        //should not be accepted because picture must be present for the location to be present
        return objupdate(pic, {picture: undefined, lat: pic.lat + extra_lat, long: pic.long + extra_long});
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ picture: undefined; lat: number; long: number; }' is not assignable to type 'Picture'.
!!! error TS2322:   Predicate implic(present(lat),present(picture)) was not satisfied in type { picture: undefined; lat: number; long: number; }
      }
    }
    function incorrectUpdate3(pic: Picture, extra_lat: number, extra_long: number) {
      //should not be accepted because it is not certain the picture property is present
      return objupdate(pic, {lat: pic.lat + extra_lat, long: pic.long + extra_long});
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ lat: any; long: any; }' is not assignable to type 'Picture'.
!!! error TS2322:   Predicate implic(present(lat),present(picture)) was not satisfied in type { lat: any; long: any; }
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95021: All properties from the predicates in which the properties of the second argument are mentioned, must be a part of the second argument
                                  ~~~~~~~
!!! error TS95009: Cannot access lat from the object because its interface does not contain the predicate present(lat). Use a non-undefined type guard.
                                                             ~~~~~~~~
!!! error TS95009: Cannot access long from the object because its interface does not contain the predicate present(long). Use a non-undefined type guard.
    }
    
    function wrongLocation(pic: Picture, extra_lat: number, extra_long: number) {
      if (pic.lat) {
        pic.long;
        return 5;
      }
      if(pic.long) {
        //impossible because pic.lat must be absent (otherwise the program would not reach this point)
        pic.lat;
        ~~~
!!! error TS95025: Predicates in true or else branch of if statement are unsatisfiable because of extra knowledge from the if condition
      }
    }
    